Removed week-label and fixed matrix align

--- a/style.css
+++ b/style.css
@@ -299,6 +299,7 @@ body {
     display: flex;
     width: 99%;
     justify-content: space-between;
+    margin: 2rem auto;
 }
 
 .desktop-days {
